infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maykell-valdiviezo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.maykell-valdiviezo.ca
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 80
            path: "/"
            pathType: Prefix

    - host: client.dev.maykell-valdiviezo.ca
      http:
        paths:
          - backend:
              service:
                name: client
                port:
                  number: 80
            path: "/"
            pathType: Prefix
